- added incoming dir to ignore list - incoming dir mounted into image - aptly api server started with container   to be able to upload/publish new packages - remove Elgamal subkey from generated key - nginx used a reverse proxy to be able to access   aptly api over same port as the repo webserver - supervisord starts aptly api at system start

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -67,6 +67,7 @@ RUN sed -i 's/\(session *required *pam_loginuid.so\)/#\1/' /etc/pam.d/cron
 
 # Install Aptly Configuration
 COPY assets/aptly.conf /etc/aptly.conf
+COPY assets/supervisord.aptlyapi.conf /etc/supervisor/conf.d/aptlyapi.conf
 
 # Enable Aptly Bash completions
 RUN wget https://github.com/smira/aptly-fork/raw/master/completion.d/aptly \
